# Eldoria

./: CMakeLists.txt  README.md
src/: application.cpp  application.h  builder.h  game.cpp  game.h  main.cpp
src/combat_system/: combat.cpp  combat.h  combat_state.h  fight_state.cpp  fight_state.h  passive_state.cpp  passive_state.h
src/commands/: command.h
src/commands/enemy/: add_enemy.cpp  add_enemy.h  kill_enemy.cpp  kill_enemy.h  loot_enemy.cpp  loot_enemy.h
src/commands/interaction/: healing_interaction.cpp  healing_interaction.h  merchant_interaction.cpp  merchant_interaction.h  prisoner_interaction.cpp  prisoner_interaction.h
src/commands/npc/: add_merchant.cpp  add_merchant.h  add_prisoner.cpp  add_prisoner.h
src/domain/entities/: basilisk.cpp  basilisk.h  enemy.cpp  enemy.h  entity.cpp  entity.h  gargoyle.cpp  gargoyle.h  ghoul.cpp  ghoul.h  mummy.cpp  mummy.h  necromancer.cpp  necromancer.h  player.cpp  player.h
src/domain/value_objects/: door_position.h  enemy_type.h  merchant.cpp  merchant.h  prisoner.cpp  prisoner.h  role.h  screen.h
src/domain/value_objects/items/: armor.cpp  armor.h  potion.cpp  potion.h  weapon.cpp  weapon.h
src/map/: levels.cpp  levels.h  map.cpp  map.h  position.h  tile.cpp  tile.h
src/movement/: enemy_movement.cpp  enemy_movement.h  player_movement.cpp  player_movement.h
src/tools/: color.h  global_settings.cpp  global_settings.h  keyboard_key.h
src/ui/: menu.cpp  menu.h  scenes.cpp  scenes.h  shop.cpp  shop.h
