cmake_minimum_required(VERSION 3.29)
project(gameRPG)

set(CMAKE_CXX_STANDARD 20)

add_executable(gameRPG
        src/main.cpp
        src/domain/entities/player.cpp
        src/domain/entities/player.h
        src/map/map.cpp
        src/map/map.h
        src/map/levels.cpp
        src/map/levels.h
        src/map/position.h
        src/ui/menu.cpp
        src/ui/menu.h
        src/application.cpp
        src/application.h
        src/domain/value_objects/role.h
        src/game.cpp
        src/game.h
        src/domain/value_objects/screen.h
        src/domain/value_objects/door_position.h
        src/ui/scenes.cpp
        src/ui/scenes.h
        src/tools/global_settings.cpp
        src/tools/global_settings.h
        src/domain/entities/enemy.cpp
        src/domain/entities/enemy.h
        src/domain/value_objects/enemy_type.h
        src/domain/value_objects/merchant.cpp
        src/domain/value_objects/merchant.h
        src/domain/value_objects/prisoner.cpp
        src/domain/value_objects/prisoner.h
        src/ui/shop.cpp
        src/ui/shop.h
        src/commands/enemy/add_enemy.cpp
        src/commands/enemy/add_enemy.h
        src/domain/entities/mummy.cpp
        src/domain/entities/mummy.h
        src/domain/entities/entity.cpp
        src/domain/entities/entity.h
        src/commands/npc/add_merchant.cpp
        src/commands/npc/add_merchant.h
        src/commands/npc/add_prisoner.cpp
        src/commands/npc/add_prisoner.h
        src/domain/entities/basilisk.cpp
        src/domain/entities/basilisk.h
        src/domain/value_objects/items/weapon.cpp
        src/domain/value_objects/items/weapon.h
        src/domain/value_objects/items/armor.cpp
        src/domain/value_objects/items/armor.h
        src/domain/value_objects/items/potion.cpp
        src/domain/value_objects/items/potion.h
        src/domain/entities/ghoul.cpp
        src/domain/entities/ghoul.h
        src/domain/entities/gargoyle.cpp
        src/domain/entities/gargoyle.h
        src/domain/entities/necromancer.cpp
        src/domain/entities/necromancer.h
        src/commands/interaction/merchant_interaction.cpp
        src/commands/interaction/merchant_interaction.h
        src/combat_system/combat.cpp
        src/combat_system/combat.h
        src/combat_system/combat_state.h
        src/combat_system/fight_state.cpp
        src/combat_system/fight_state.h
        src/combat_system/passive_state.cpp
        src/combat_system/passive_state.h
        src/commands/enemy/kill_enemy.cpp
        src/commands/enemy/kill_enemy.h
        src/map/tile.cpp
        src/map/tile.h
        src/commands/interaction/prisoner_interaction.cpp
        src/commands/interaction/prisoner_interaction.h
        src/commands/interaction/healing_interaction.cpp
        src/commands/interaction/healing_interaction.h
        src/movement/enemy_movement.cpp
        src/movement/enemy_movement.h
        src/movement/player_movement.cpp
        src/movement/player_movement.h
        src/commands/enemy/loot_enemy.cpp
        src/commands/enemy/loot_enemy.h
        src/tools/color.h
        src/builder.h
        src/commands/command.h
        src/tools/keyboard_key.h
)
